@@ -1,3 +1,12 @@
+2002-03-26 16:04  salaun
+
+	* src/mail.pm, src/sympa.pl, src/task_manager.pl,
+	wwsympa/wwsympa.fcgi: Fix: the parser is now invocated via List.pm
+
+2002-03-26 10:53  salaun
+
+	* .version, ChangeLog, NEWS: Preparing 3.3.4b.4
+
 2002-03-22 17:22  salaun
 
 	* wwsympa/wws_templates/: fr/help.fr.tpl, fr/pref.fr.tpl,
